[package]
name = "redis_backed"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
redis = "0.11.0-beta.1"
futures = "0.1.27"
tokio = "0.1.21"
serde_cbor = "0.9.0"
failure = "0.1.5"

[dependencies.serde]
version = "1.0.92"
features = ["derive"]

[[bin]]
name = "main"
path = "./src/main.rs"

[[bin]]
name = "setup"
path = "./src/setup.rs"
